--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cookies": "^0.9.1",
     "ejs": "^3.1.10",
     "groq-sdk": "^0.19.0",
+    "js-cookie": "^3.0.5",
     "next": "15.2.3",
     "next-auth": "^4.24.11",
     "node-cron": "^3.0.3",
